--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="https://maypo.dev-lk.mx/img/icons/favicon-32x32.png">
-    <title>Ruteador Maypo</title>
+    <title>Unidades médicas usuarias ISSSTE</title>
   </head>
   <body>
     <noscript>
